testdata/invalid/constant_invalid_21.lisp
;;error:2:15-18:unknown type
(defconst (C1 :x5) 2)
